--- a/my_app/pipeline_prediction_model_v1-2.ipynb
+++ b/my_app/pipeline_prediction_model_v1-2.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "@component(packages_to_install=[\"google-cloud-bigquery\"])\n",
-    "def validateData(\n",
+    "def validate_data(\n",
     "    source_x_train_table: str,\n",
     ") -> NamedTuple(\n",
     "    \"Outputs\",\n",
@@ -110,7 +110,7 @@
     "    from io import BytesIO\n",
     "    from pytz import timezone\n",
     "    \n",
-    "    TZ = timezone('America/Lima')\n",
+    "    tz = timezone('America/Lima')\n",
     "    format_date = \"%Y-%m-%d\"\n",
     "    \n",
     "    # Cliente BigQuery\n",
@@ -136,7 +136,7 @@
     "        return datetime.now()\n",
     "    \n",
     "    def generate_date_created():\n",
-    "        return datetime.now(TZ).date().strftime(format_date)\n",
+    "        return datetime.now(tz).date().strftime(format_date)\n",
     "    \n",
     "    \n",
     "    def load_model_from_gcs(path_model):\n",
